-------------------------------------------------------------------
Sun Jan 25 22:35:07 CET 2014 - anaselli@linux.it

- Fixed QTabBar currentChanged signal connection (instead of 
  selected)
- Fixed <libqt-warning> QFSFileEngine::open: No file name specified
- Fixed YTree item selection during items population,
  old implementation ignored selected items.
- Fixed YQTable item selected slot, if no items were selected
  at creation, first slection was ignored
- 2.45.1

-------------------------------------------------------------------
Tue Jan  7 12:50:04 UTC 2014 - mvidner@suse.com

- Ported to Qt5
- 2.45.0

-------------------------------------------------------------------
Thu Dec  5 16:36:33 UTC 2013 - mvidner@suse.com

- adjusted to libyui so version 6
- 2.44.0

-------------------------------------------------------------------
Mon Nov 11 12:06:24 UTC 2013 - jsrain@suse.cz

- Added handling of release notes using UI-independent handler
  (fate#314695)

-------------------------------------------------------------------
Wed Oct 16 09:23:40 UTC 2013 - jsrain@suse.cz

- added possibility to show release notes button in dialog heading
  (fate#314695)

-------------------------------------------------------------------
Tue Aug  6 14:46:19 CEST 2013 - tgoettlicher@suse.de

- fixed dependencies
- Version 2.43.5

-------------------------------------------------------------------
Tue Jul 16 16:01:07 CEST 2013 - tgoettlicher@suse.de

- Fix build of libyui-qt-graph
- Version 2.43.4

-------------------------------------------------------------------
Fri May 10 10:40:00 UTC 2013 - bjoern.esser@gmail.com

- use a common toplevel CMakeLists.txt
- fix building *-doc pkgs
- introduce bootstrap.sh
- Version 2.43.3

-------------------------------------------------------------------
Mon May  6 13:30:00 UTC 2013 - bjoern.esser@gmail.com

- fix build issues
- Version 2.43.2

-------------------------------------------------------------------